Prevent any scrolling (most needed on mobile, to prevent accidental drag being interpreted as a scroll motion, but this change applies on desktop as well)

--- a/akc/css/common.css
+++ b/akc/css/common.css
@@ -5,8 +5,13 @@
   user-select: none;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   margin: 0;
+  overflow: hidden;
   background-color: #fff;
   color: #000;
 
