--- a/akc/css/game.css
+++ b/akc/css/game.css
@@ -1,10 +1,9 @@
-body, .layer {
+html, body, .layer {
   width: 100%;
   height: 450px;
 }
 
 body {
-  overflow: hidden;
   font-size: 30px;
 }
 
